Tue Mar 18 19:07:17 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix bug reloading http images that fail to download on subsequent
    attempts.

Sun Feb 23 16:23:00 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 1.2.5, for small bugfix below.

Sun Feb 23 16:19:15 GMT 2003  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fix http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=169911
  * Start of IPC code, not used yet.

Mon Dec 23 01:19:17 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Experimental speedup for caption editing. Caches the bg pixmap for the
    image (which doesn't change when you're just editing a caption) so only
    the overlay needs to be re-rendered on each change to the caption.
    Definitely makes a difference when editing captions on a large, fullscreen
    image.

Sun Dec 22 22:59:31 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Tweak event handling - don't nuke queued keyevents when we're accepting
    input for caption entry.

Sun Dec 22 13:50:16 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed wrapping for long lines with no spaces
  * Caption editing, also requested by David Blackman <david@whizziwig.com>
    Hit 'c', edit caption, enter to confirm the changes or Escape to revert.
    (Only when --captions-path has been specified).
  * Spotted a couple of minor bugs as I went through stuff, fixed those two.

Sat Dec 21 20:32:40 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * New option --captions-path. Specify a path (relative to each image) to a
    directory with captions in and feh will overlay them on the image. It even
    does text wrapping and centering!
    Example, run feh --captions-path captions testimages
    for image testimages/donna1.jpg, feh will look for a caption in
    testimages/captions/donna1.jpg.txt
  * This feature was requested by David Blackman <david@whizziwig.com>

Thu Dec 19 23:09:19 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed bug - segv when last image in slideshow is deleted.
